# llvm-project

clang/: CMakeLists.txt
clang-tools-extra/clang-apply-replacements/: CMakeLists.txt
clang-tools-extra/clang-change-namespace/: CMakeLists.txt
clang-tools-extra/clang-change-namespace/tool/: CMakeLists.txt
clang-tools-extra/clang-doc/: CMakeLists.txt
clang-tools-extra/clang-include-fixer/: CMakeLists.txt
clang-tools-extra/clang-include-fixer/find-all-symbols/: CMakeLists.txt
clang-tools-extra/clang-include-fixer/find-all-symbols/tool/: CMakeLists.txt
clang-tools-extra/clang-include-fixer/tool/: CMakeLists.txt
clang-tools-extra/clang-move/: CMakeLists.txt
clang-tools-extra/clang-move/tool/: CMakeLists.txt
clang-tools-extra/clang-query/: CMakeLists.txt
clang-tools-extra/clang-reorder-fields/: CMakeLists.txt
clang-tools-extra/clang-tidy/: CMakeLists.txt
clang-tools-extra/clang-tidy/mpi/: CMakeLists.txt
clang-tools-extra/clang-tidy/tool/: CMakeLists.txt
clang-tools-extra/clangd/: CMakeLists.txt  Shutdown.cpp
clang-tools-extra/clangd/indexer/: CMakeLists.txt
clang-tools-extra/clangd/tool/: CMakeLists.txt
clang-tools-extra/modularize/: CMakeLists.txt
clang-tools-extra/tool-template/: CMakeLists.txt
clang-tools-extra/unittests/clang-move/: CMakeLists.txt
clang/examples/Attribute/: CMakeLists.txt
clang/include/clang-c/: Index.h
clang/lib/AST/: ASTContext.cpp  ItaniumMangle.cpp  MicrosoftMangle.cpp  Type.cpp  TypePrinter.cpp
clang/lib/Basic/: TargetInfo.cpp
clang/lib/CodeGen/: CGBuilder.h  CGCall.cpp  CGDebugInfo.cpp  CGObjCGNU.cpp  CGStmt.cpp  CodeGenModule.cpp
clang/lib/Driver/: Driver.cpp  ToolChain.cpp
clang/lib/Frontend/: PrintPreprocessedOutput.cpp
clang/lib/Headers/: __clang_cuda_cmath.h  __clang_cuda_runtime_wrapper.h  __stddef_max_align_t.h  stdint.h
clang/lib/Sema/: SemaDeclAttr.cpp  SemaExprCXX.cpp  SemaType.cpp
clang/lib/Tooling/: CMakeLists.txt
clang/lib/Tooling/DumpTool/: CMakeLists.txt
clang/test/CodeGenCXX/: exceptions.cpp
clang/tools/: CMakeLists.txt
clang/tools/IndexStore/: CMakeLists.txt
clang/tools/clang-shlib/: CMakeLists.txt
compiler-rt/: CMakeLists.txt
compiler-rt/cmake/: base-config-ix.cmake  config-ix.cmake
compiler-rt/cmake/Modules/: AddCompilerRT.cmake
compiler-rt/lib/asan/: CMakeLists.txt
compiler-rt/lib/builtins/: fp_lib.h
compiler-rt/lib/fuzzer/: CMakeLists.txt
compiler-rt/lib/hwasan/: CMakeLists.txt  hwasan_exceptions.cpp
compiler-rt/lib/sanitizer_common/: sanitizer_linux.cpp  sanitizer_platform_limits_posix.cpp  sanitizer_unwind_win.cpp  sanitizer_win.cpp
compiler-rt/lib/scudo/: CMakeLists.txt
compiler-rt/lib/tsan/: CMakeLists.txt
compiler-rt/lib/ubsan/: CMakeLists.txt
flang/: CMakeLists.txt
flang/lib/Common/: CMakeLists.txt
flang/lib/Evaluate/: constant.cpp  intrinsics.cpp  tools.cpp
flang/lib/Lower/: CMakeLists.txt
flang/lib/Optimizer/: CMakeLists.txt
flang/lib/Parser/: CMakeLists.txt
flang/lib/Semantics/: CMakeLists.txt  check-declarations.cpp  expression.cpp  resolve-names.cpp  runtime-type-info.cpp
flang/module/: __fortran_builtins.f90
flang/runtime/: command.cpp  misc-intrinsic.cpp  time-intrinsic.cpp  transformational.cpp
flang/tools/f18/: CMakeLists.txt
flang/tools/flang-driver/: CMakeLists.txt
libclc/: CMakeLists.txt
libclc/cmake/: CMakeLLAsmInformation.cmake
libcxx/: CMakeLists.txt
libcxx/include/: __availability  __config  __threading_support  module.modulemap
libcxx/src/: CMakeLists.txt  thread.cpp
libcxxabi/: CMakeLists.txt
libcxxabi/src/: CMakeLists.txt  cxa_handlers.cpp  stdlib_stdexcept.cpp  stdlib_typeinfo.cpp
libunwind/src/: CMakeLists.txt
lld/MachO/: CMakeLists.txt  Driver.cpp  Options.td
lldb/: CMakeLists.txt
lldb/bindings/interface/: SBValueList.i
lldb/bindings/lua/: CMakeLists.txt
lldb/bindings/python/: CMakeLists.txt  python-typemaps.swig
lldb/cmake/modules/: FindLuaAndSwig.cmake
lldb/source/API/: CMakeLists.txt
lldb/source/Core/: Mangled.cpp  ValueObject.cpp  ValueObjectChild.cpp  ValueObjectVariable.cpp
lldb/source/Host/: CMakeLists.txt
lldb/source/Symbol/: CMakeLists.txt
lldb/tools/driver/: CMakeLists.txt
lldb/tools/lldb-server/: CMakeLists.txt
lldb/tools/lldb-vscode/: CMakeLists.txt
lldb/utils/lit-cpuid/: CMakeLists.txt
llvm/: CMakeLists.txt
llvm/cmake/: config-ix.cmake
llvm/cmake/modules/: AddLLVM.cmake  HandleLLVMOptions.cmake  HandleLLVMStdlib.cmake
llvm/docs/: LangRef.rst  ReleaseNotes.rst
llvm/include/llvm-c/: Core.h
llvm/lib/Analysis/: TargetLibraryInfo.cpp
llvm/lib/AsmParser/: LLParser.cpp
llvm/lib/CodeGen/: JMCInstrumenter.cpp  (+1 more)
llvm/tools/llvm-cfi-verify/lib/: CMakeLists.txt
mlir/: CMakeLists.txt
mlir/lib/Analysis/: CMakeLists.txt
mlir/lib/Conversion/AffineToStandard/: CMakeLists.txt
mlir/lib/Conversion/GPUToNVVM/: CMakeLists.txt
mlir/lib/Conversion/GPUToSPIRV/: CMakeLists.txt
mlir/lib/Conversion/LinalgToLLVM/: CMakeLists.txt
mlir/lib/Conversion/LoopToStandard/: CMakeLists.txt
mlir/lib/Conversion/LoopsToGPU/: CMakeLists.txt
mlir/lib/Conversion/VectorToLLVM/: CMakeLists.txt
mlir/lib/Conversion/VectorToLoops/: CMakeLists.txt
mlir/lib/Dialect/: CMakeLists.txt
mlir/lib/Dialect/AffineOps/: CMakeLists.txt
mlir/lib/Dialect/GPU/: CMakeLists.txt
mlir/lib/Dialect/LLVMIR/: CMakeLists.txt
mlir/lib/Dialect/LoopOps/: CMakeLists.txt
mlir/lib/Dialect/SDBM/: CMakeLists.txt
mlir/lib/Dialect/SPIRV/: CMakeLists.txt
mlir/lib/Dialect/SPIRV/Serialization/: CMakeLists.txt
mlir/lib/Dialect/SPIRV/Transforms/: CMakeLists.txt
mlir/lib/Dialect/StandardOps/: CMakeLists.txt
mlir/lib/Dialect/VectorOps/: CMakeLists.txt
mlir/lib/ExecutionEngine/: CMakeLists.txt
mlir/lib/IR/: CMakeLists.txt
mlir/lib/Parser/: CMakeLists.txt
mlir/lib/Pass/: CMakeLists.txt
mlir/lib/Support/: CMakeLists.txt
mlir/lib/TableGen/: CMakeLists.txt
mlir/python/: CMakeLists.txt
mlir/test/EDSC/: CMakeLists.txt
mlir/test/SDBM/: CMakeLists.txt
mlir/tools/mlir-tblgen/: CMakeLists.txt
polly/cmake/: polly_macros.cmake
polly/lib/: CMakeLists.txt
(+152 files in other folders)
